# ASyncTranslator

./: .coveragerc  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
asynctranslator/: __init__.py  current_thread_executor.py  local.py  sync.py
tests/: __init__.py  test_sync.py
