[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.poetry]
name = "asynctranslator"
version = "1.0.1"
description = "Typed Async-to-sync & Sync-to-async utility"
license = "BSD-3-Clause"
authors = ["Predeactor <pro.julien.mauroy@gmail.com>"]
maintainers = ["Predeactor <pro.julien.mauroy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Predeactor/ASyncTranslator"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed"
]
packages = [
    { include = "asynctranslator" }
]
include = ["LICENSE", "LICENSE.django"]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
isort = "5.11.2"
pytest-html = "^3.2.0"
pytest-cov = "^4.0.0"
tox = "^4.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
